--- a/codec/pom.xml
+++ b/codec/pom.xml
@@ -88,8 +88,8 @@
       <groupId>com.github.luben</groupId>
       <artifactId>zstd-jni</artifactId>
       <version>${ztsd-version}</version>
+      <optional>true</optional>
     </dependency>
-
 
     <dependency>
       <groupId>org.mockito</groupId>
